# umf1

./: CMakeLists.txt  README.md  fdm.cpp  fn.h  input.cpp  main.cpp  solver  sor.cpp  task.txt  РАЗБОР_КОДА.md
docs/: main.tex
in/: area.txt  grid.txt
